Fixed an issue with the skills layout on mobile

--- a/source/css/_pages/_work.scss
+++ b/source/css/_pages/_work.scss
@@ -127,9 +127,9 @@ html{
           }
 
           &.masthead{
-	    width: 100%;
-	    padding-bottom: 33.10%;
-	    background-size: contain;
+            width: 100%;
+            padding-bottom: 33.10%;
+            background-size: contain;
           }
 
           &.gallery{
@@ -143,6 +143,21 @@ html{
               }
             }
           }
+
+          &.body{
+
+            ul.skills{
+              
+              li{
+                float: none;
+                width: 100%;
+                min-width: 100%;
+                max-width: 100%;
+              }
+            }
+          }
+
+
         }
 
 
